--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,8 @@
-PORT = ------------
-MONGODB_URI = "-------------"
-SECRET_KEY = -------------------
+PORT = -----------------
+MONGODB_URI = "----------------------"
+SECRET_KEY = -----------------
+NODE_ENV = "-----------"
+
+# Admin Info
+SELLER_EMAIL: "----------------"
+SELLER_PASSWORD: "----------------------------"
